2003-04-03  Larry Ewing  <lewing@ximian.com>

	* gtkhtml.c (selection_received): add UTF8_STRING dnd support.

	* htmlengine.c: don't try to create image inputs with no src url.

2003-04-03  Radek Doulik  <rodo@ximian.com>

	* gtkhtml.c (gtk_html_set_paragraph_style): if selection is
	active, change style everytime
	(scroll_timeout_cb): don't clamp coordinates if we are already at
	the boundaries

	* htmlengine-edit-cut-and-paste.c (delete_object): update
	selection after cursor/mark move

2003-04-03  Not Zed  <NotZed@Ximian.com>

	** for bug 40450, based on patch from <philip.zhao@sun.com>

	* htmltextslave.c (html_text_slave_nb_width)
	(html_text_slave_remove_leading_space): Remove inline keyword on
	non-static methods.

	* htmlobject.c (html_object_engine_translation): change the //
	comment to a /* comment, // not supported by ansi c.
	(html_object_next_leaf, html_object_prev_leaf,
	html_object_next_cursor, html_object_prev_cursor): Remove inline
	keyword on non-static methods.

2003-04-02  Larry Ewing  <lewing@ximian.com>

	* gtkhtml-propmanager.c (gtk_html_propmanager_get_type): start
	porting to gobject.

2003-04-02  Radek Doulik  <rodo@ximian.com>

	* htmlengine-edit-cut-and-paste.c (html_engine_delete): fix cursor
	position afterwards

	* gtkhtml.c (gtk_html_im_delete_surrounding_cb): fix cursor
	movement, return to original position if possible
	(key_press_event): call gtk_im_context_filter_keypress only when
	binding not handled
	(key_release_event): ditto

2003-04-02  Larry Ewing  <lewing@ximian.com>

	* htmlimage.c: be more careful about zeroing some of the timeouts.

2003-04-01  Larry Ewing  <lewing@ximian.com>

	* htmlengine-edit-cursor.c (html_engine_draw_cursor_in_area):
	update the im_context cursor location as it moves.

2003-04-01  Radek Doulik  <rodo@ximian.com>

	* htmltextslave.c (hts_fit_line): fix breaking

	* htmlclueflow.c (layout_line): don't force objects to go to next
	line once we reach right margin
